# polarphp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  README.en_US.md  README.md  README.zh_CN.md
TSRM/: CMakeLists.txt  tsrm_config.h.cmake
Zend/: CMakeLists.txt  zend.c  zend_config.h.cmake  zend_ini_scanner_defs.h.h  zend_language_scanner_defs.h  zend_long.h
artifacts/: CMakeLists.txt  main.cpp
artifacts/lib/: Commands.cpp  Commands.h  DefaultConfigInit.cpp  Defs.h  ExecEnv.cpp  ExecEnv.h  ExecEnvGettersAndSetters.cpp  Ini.cpp  Ini.h  IniModifyHandlers.cpp  InternalFunctions.cpp  LifeCycle.cpp  LifeCycle.h  ModuleMgr.cpp  ModuleMgr.h  Output.cpp  Output.h  PhpSnprintf.cpp  PhpSnprintf.h  PhpSpprintf.cpp  PhpSpprintf.h  PolarVersion.h.cmake  ProcessTitle.cpp  ProcessTitle.h  Reentrancy.cpp  Reentrancy.h  ScanDir.cpp  ScanDir.h  SysLog.cpp  SysLog.h  Ticks.cpp  Ticks.h  Utils.cpp  Utils.h  ZendHeaders.h
assets/: CMakeLists.txt
assets/dockertestscripts/: main.php
devtools/filechecker/: CMakeLists.txt  Config.h.cmake  main.cpp
devtools/lit/: CMakeLists.txt  Config.h.cmake  config.h.cmake  main.cpp
devtools/utils/: AlignOf.h  ArrayExtras.h  CMakeLists.txt  Chrono.cpp  Chrono.h  CompilerFeature.h  Config.h.cmake  DataTypes.h  Debug.h  Error.cpp  Error.h  ErrorCode.h  ErrorHandling.cpp  ErrorHandling.h  ErrorNumber.cpp  ErrorNumber.h  Format.cpp  Format.h  FormatAdapters.h  FormatCommon.h  FormatProviders.h  FormatVariadic.h  FormatVariadicDetail.h  FormattedStream.h  Funcs.cpp  Funcs.h  ManagedStatics.cpp  ManagedStatics.h  MathExtras.cpp  MathExtras.h  MemoryAlloc.h  MemoryBuffer.h  NativeFormatting.cpp  NativeFormatting.h  OptionalError.h  ProcessUtils.h  Signals.cpp  Signals.h  StlExtras.h  Stream.cpp  (+4 more)
include/: CMakeLists.txt
include/polarphp/: CMakeLists.txt
src/: CMakeLists.txt
src/TSRM/: CMakeLists.txt  TSRM.h
src/Zend/: CMakeLists.txt  zend_alloc.c  zend_ini_scanner_defs.h.h  zend_language_scanner_defs.h
src/ast/: AccessRequests.cpp  AstContext.cpp  AstDemangler.cpp  AstDumper.cpp  AstMangler.cpp  AstNode.cpp  AstPrinter.cpp  AstScope.cpp  AstScopeCreation.cpp  AstScopeLookup.cpp  AstScopePrinting.cpp  AstScopeSourceRange.cpp  AstVerifier.cpp  AstWalker.cpp  Attr.cpp  Availability.cpp  AvailabilitySpec.cpp  Builtins.cpp  CMakeLists.txt  CaptureInfo.cpp  ClangPolarphpTypeCorrespondence.cpp  ClangTypeConverter.cpp  ConcreteDeclRef.cpp  ConformanceLookupTable.cpp  Decl.cpp  DeclContext.cpp  DeclNameLoc.cpp  DiagnosticConsumer.cpp  DiagnosticEngine.cpp  DiagnosticList.cpp  DocComment.cpp  Evaluator.cpp  ExperimentalDependencies.cpp  ExperimentalDependenciesSourceFileDepGraphConstructor.cpp  Expr.cpp  FineGrainedDependencies.cpp  FineGrainedDependenciesSourceFileDepGraphConstructor.cpp  GenericEnvironment.cpp  GenericSignature.cpp  GenericSignatureBuilder.cpp  (+31 more)
src/basic/: AnyValue.cpp  CMakeLists.txt  CharInfo.cpp  ClusteredBitVector.cpp  DiverseStack.cpp  Edit.cpp  EditorPlaceholder.cpp  ExponentialGrowthAppendingBinaryByteStream.cpp  FileTypes.cpp  Filesystem.cpp  JSONSerialization.cpp  LLVMContext.cpp  LangOptions.cpp  LangTimer.cpp  Mangler.cpp  OutputFileMap.cpp  Platform.cpp  PrefixMap.cpp  PrettyStackTrace.cpp  PrimitiveParsing.cpp  Program.cpp  QuotedString.cpp  SourceLoc.cpp  SourceMgr.cpp  Statistic.cpp  StringExtras.cpp  TastQueue.cpp  ThreadSafeRefCounted.cpp  Timer.cpp  Unicode.cpp  UnicodeExtendedGraphemeClusters.cpp  Uuid.cpp  Version.cpp
src/clangimporter/: CFTypeInfo.cpp  CMakeLists.txt  ClangAdapter.cpp  ClangDiagnosticConsumer.cpp  ClangImporter.cpp  ClangSourceBufferImporter.cpp  DWARFImporter.cpp  IAMInference.cpp  ImportDecl.cpp  ImportEnumInfo.cpp  ImportMacro.cpp  ImportType.cpp  TypePHPLookupTable.cpp
src/demangling/: CMakeLists.txt  Context.cpp  Demangler.cpp  ManglingUtils.cpp  NodeDumper.cpp  NodePrinter.cpp  Punycode.cpp  Remangler.cpp
src/driver/: Action.cpp  CMakeLists.txt  Compilation.cpp  DarwinToolChains.cpp  DependencyGraph.cpp  Driver.cpp  DriverIncrementalRanges.cpp  ExperimentalDependencyDriverGraph.cpp  FineGrainedDependencyDriverGraph.cpp  FrontendUtil.cpp  Job.cpp  ParseableOutput.cpp  PrettyStackTrace.cpp  SourceComparator.cpp  ToolChain.cpp  ToolChains.cpp  UnixToolChains.cpp  WindowsToolChains.cpp
src/frontend/: ArgsToFrontendInputsConverter.cpp  ArgsToFrontendOptionsConverter.cpp  ArgsToFrontendOutputsConverter.cpp  CMakeLists.txt  CompilerInvocation.cpp  DiagnosticVerifier.cpp  Frontend.cpp  FrontendInputsAndOutputs.cpp  FrontendOptions.cpp  ModuleInterfaceBuilder.cpp  ModuleInterfaceLoader.cpp  ModuleInterfaceSupport.cpp  PrintingDiagnosticConsumer.cpp  SerializedDiagnosticConsumer.cpp
src/frontendtool/: CMakeLists.txt  FrontendTool.cpp  ImportedModules.cpp  ReferenceDependencies.cpp  TBD.cpp
src/global/: CMakeLists.txt  Global.cpp
src/ide/: APIDigesterData.cpp  CMakeLists.txt  CodeCompletion.cpp  CodeCompletionCache.cpp  CommentConversion.cpp  ConformingMethodList.cpp  ExprContextAnalysis.cpp  Formatting.cpp  IDERequests.cpp  IDETypeChecking.cpp  ModuleInterfacePrinting.cpp  PHPSourceDocInfo.cpp  REPLCodeCompletion.cpp  Refactoring.cpp  SourceEntityWalker.cpp  SyntaxModel.cpp  TypeContextInfo.cpp  Utils.cpp
src/immediate/: CMakeLists.txt  Immediate.cpp  REPL.cpp
src/index/: CMakeLists.txt  Index.cpp  IndexDataConsumer.cpp  IndexRecord.cpp  IndexSymbol.cpp
src/irgen/: AllocStackHoisting.cpp  CMakeLists.txt  ClassLayout.cpp  DebugTypeInfo.cpp  EnumPayload.cpp  ExtraInhabitants.cpp  Fulfillment.cpp  GenArchetype.cpp  GenBuiltin.cpp  GenCall.cpp  GenCast.cpp  GenClangDecl.cpp  GenClangType.cpp  GenClass.cpp  GenConstant.cpp  GenControl.cpp  GenCoverage.cpp  GenDecl.cpp  GenEnum.cpp  GenExistential.cpp  GenFunc.cpp  GenHeap.cpp  GenInit.cpp  GenIntegerLiteral.cpp  GenInterface.cpp  GenKeyPath.cpp  GenMeta.cpp  GenOpaque.cpp  GenPoly.cpp  GenReflection.cpp  GenStruct.cpp  GenThunk.cpp  GenTuple.cpp  GenType.cpp  GenValueWitness.cpp  IRGen.cpp  IRGenDebugInfo.cpp  (+14 more)
stdlib/: CMakeLists.txt
tests/: CMakeLists.txt  litcfg.cmake  litcfg.cpp
unittests/: CMakeLists.txt  TestEntry.cpp
(+2854 files in other folders)
